--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,12 @@ services:
 
   migrate:
     image: migrate/migrate
-    command: -path=/migrations/ -database="postgresql://aichieve:aichieve@postgres:5432/aichieve?sslmode=disable" up
     volumes:
-      - ./go/migrations:/migrations
+      - ./go/db/migrations:/migrations
     depends_on:
       - mysql
+    environment:
+      - DSN
 
   mysql:
     image: mysql
